[package]
name = "wowcpe"
version = "0.1.0"
authors = ["Mitchell Kember <mk12360@gmail.com>"]
description = "Command-line tool for the classical radio station WCPE"
license = "MIT"
homepage = "https://github.com/mk12/wowcpe"
repository = "https://github.com/mk12/wowcpe"
documentation = "https://docs.rs/wowcpe"
readme = "README.md"
keywords = ["classical", "music", "WCPE", "scraper"]
categories = ["command-line-utilities"]

[[bin]]
name = "wowcpe"
doc = false

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
clap = "2.25.0"
curl = "0.4.7"
table-extract = "0.2.0"
