[package]
name = "wowcpe"
version = "0.1.5"
authors = ["Mitchell Kember <mk12360@gmail.com>"]
edition = "2018"
description = "Command-line tool for the classical radio station WCPE"
license = "MIT"
homepage = "https://github.com/mk12/wowcpe"
repository = "https://github.com/mk12/wowcpe"
documentation = "https://docs.rs/wowcpe"
readme = "README.md"
keywords = ["classical", "music", "WCPE", "scraper"]
categories = ["command-line-utilities"]

[lib]
name = "wowcpe"
doc = true

[[bin]]
name = "wowcpe"
doc = false

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
clap = "2.33"
curl = "0.4"
encoding = "0.2"
marksman_escape = "0.1"
table-extract = "0.2.2"

[dev-dependencies]
assert_matches = "1.3"
